maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: ')' expected but 'if' found.
		if(estFaceMur()){
                ^