maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {

def keepHandOnSideWall()={
	gauche()
	if(estFaceMur()){
		droite()
		if(!estFaceMur(){avance()}
		gauche()
		if(estFaceMur()){
			droite()
			if(!estFaceMur()){avance()}
		}
		else{
			avance()
			gauche()
			if(estFaceMur()){droite()}
			else{if(!estFaceMur()){avance()}}
		}
	}
	
}

while(!estSurBiscuit){ 
keepHandOnSideWall()
}
}
